--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-django==4.0.2
-pytest==6.2.5
-flake8==4.0.1
-pytest-django==4.5.2
+asgiref==3.5.2
+attrs==22.1.0
+Django==4.0.2
 django-extensions==3.1.5
+flake8==4.0.1
+iniconfig==1.1.1
+mccabe==0.6.1
+packaging==21.3
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==3.0.9
+pytest==6.2.5
+pytest-django==4.5.2
+sqlparse==0.4.3
+toml==0.10.2
